updates to core

--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
 
             <!-- Content -->
             <section class="page-section">
-                <div class="container--small">
+                <div class="container--medium">
                     <!-- Section Title -->
                     <div class="page-section__title-wrapper text-center" id="section--section-title">
                         <h5 class="page-section__subtitle with-divider">Section Subtitle</h5>
@@ -565,6 +565,9 @@
                         </li>
                         <li class="button-group__item">
                             <a href="#" class="button-group__button button--outline">Outline</a>
+                        </li>
+                        <li class="button-group__item">
+                            <a href="#" class="button-group__button button--outline--highlight">Outline (Highlight)</a>
                         </li>
                         <li class="button-group__item">
                             <a href="#" class="button-group__button button--success">Success</a>
