partials and post compile working

--- a/src/index.html
+++ b/src/index.html
@@ -510,12 +510,12 @@
             <section class="hero" id="section--hero">
                 <!-- Slide: Intro -->
                 <div class="hero__slide bg-size--cover bg-pos--center" style="background-image:url('https://picsum.photos/1920/1080?image=440')">
-                    @@include ('slide.html')
+                    @@include('slide.html')
                 </div>
                 <!-- Slide: With Video -->
                 <div class="hero__slide bg-size--cover bg-pos--center">
                     <div class="hero__slide-content-container container--small">
-                        <h5 class="hero__slide-subtitle">Slide Onez</h5>
+                        <h5 class="hero__slide-subtitle">Slide One</h5>
                         <h1 class="hero__slide-title">Slide with Video</h1>
                         <p class="hero__slide-content">This slide contains a textural background video in multiple formats.</p>
                         <a href="" class="hero__slide-cta button--highlight">Learn More</a>
